deploy/k8s/elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    app: ventas
    tier: elasticsearch
spec:
  selector:
    app: ventas
    tier: elasticsearch
  ports:
  - name: "9200"
    port: 9200
  - name: "9300"
    port: 9300
