deploy/k8s/ventas-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ventas
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: ventas
    tier: backend
status:
  loadBalancer: {}
